# LeleILoko

./: Flyin.py  Makefile  README.md  pyproject.toml  test.py
algo/: pathfind.py
draw/: draw_drone.py  draw_window.py  draw_wire.py  draw_zone.py
maps/test/: azur.txt  oprmap.txt  rainbow.txt  test1.txt
parthing/: __init__.py  parthing_folders.py
use_terminal/: __init__.py  color.py  cursor.py
